ENH: add functions to persist pandas.DataFrame with attributes; restructure parts of project

--- a/tweezer/templates/tweebot_individual_overview.Rnw
+++ b/tweezer/templates/tweebot_individual_overview.Rnw
@@ -39,6 +39,19 @@
 \author{Marcus Jahnel}
 
 \begin{document}
+<<setup,echo=F>>= 
+setCacheDir("cache") 
+@ 
+
+<<loadingData, echo=FALSE, results=hide>>=
+library(tweezR)
+
+@                   
+
+
+
+
+
 \section*{Tweebot Experiment}
 
 Here is a code chunk. this is this $\Sexpr{4}$ 
