FIX: Thermal calibration notebook: finding files routine modified

--- a/notebooks/Thermal calibration.ipynb
+++ b/notebooks/Thermal calibration.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a9b3b22743bf1af2e2a2bb5a9fef1c6e546848f2d5082b4fb322ac60ce8e9e0c"
+  "signature": "sha256:43b555fc45f51194e028a7332d2ab2caf169a31ba2ba0984bd2ca9dbc69bad8b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,10 +15,11 @@
       "%load_ext autoreload\n",
       "%autoreload 2\n",
       "%matplotlib inline\n",
-      "from ixo.file import get_similar_files\n",
+      "from ixo.file import get_files\n",
       "from tweezer.io import TxtSourceMpi\n",
       "from tweezer import TweezerData\n",
-      "from tweezer.plot.psd import PsdFitPlot"
+      "from tweezer.plot.psd import PsdFitPlot\n",
+      "import re"
      ],
      "language": "python",
      "metadata": {},
@@ -32,7 +33,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 38
     },
     {
      "cell_type": "heading",
@@ -46,60 +47,66 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Run the thermal calibration in batch on all matching files in the given directory."
+      "Run the thermal calibration in batch on all matching files in the given directory. A nicer way to find the correct files could be required here."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# find files\n",
-      "path = '/Users/christophehrlich/Documents/TranscriptionData/D3/refit'\n",
-      "files = get_similar_files(path, foldersApart=1, categories=[['', '.txt'], ['PSD_', '.txt'], ['TS_', '.txt']])\n",
+      "# get all files\n",
+      "path = '/Volumes/dualtrapgrill/vero/FINAL_CORRECTION/New_Fitting_LS_25_weigthedFit/'\n",
+      "files = get_files(path, suffix='.txt', recursive=True)\n",
       "\n",
+      "# sort them\n",
+      "dataFiles = []\n",
+      "tsFiles = []\n",
+      "psdFiles = []\n",
       "for file in files:\n",
-      "    print('Processing: ' + str(file[0]))\n",
-      "    \n",
-      "    # create data source for file\n",
-      "    source = TxtSourceMpi(data=file[0], psd=file[1], ts=file[2])\n",
-      "    # create data object\n",
-      "    data = TweezerData(source)\n",
-      "    data.compute_psd().fit_psd(maxF=3000)\n",
-      "    # write stuff back to data file\n",
-      "    source.write_data(data)"
+      "    if file.name[0].isdigit():\n",
+      "        dataFiles.append(file)\n",
+      "    elif file.name.startswith('TS_'):\n",
+      "        tsFiles.append(file)\n",
+      "    elif file.name.startswith('PSD_'):\n",
+      "        psdFiles.append(file)\n",
+      "\n",
+      "# find matching pairs in data and ts\n",
+      "tsRegex = re.compile('^TS_(?P<name>.*?)\\.txt$')\n",
+      "dataRegex = re.compile('^(?P<name>.*?)(_zoom.*)?\\.txt$')\n",
+      "matchedFiles = []\n",
+      "for tsFile in tsFiles:\n",
+      "    tsName = tsRegex.match(tsFile.name).groupdict()['name']\n",
+      "    for dataFile in dataFiles:\n",
+      "        dataName = dataRegex.match(dataFile.name).groupdict()['name']\n",
+      "        # check for same name and similar parent folders\n",
+      "        if tsName == dataName and tsFile.parents[1] == dataFile.parents[1]:\n",
+      "            matchedFiles.append([dataFile, tsFile])"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Processing: /Users/christophehrlich/Documents/TranscriptionData/D3/refit/data/35_Date_2014_08_18_15_55_29.txt\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
+     "outputs": [],
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "str(files[0][0])"
+      "for file in matchedFiles:\n",
+      "    print('Processing: ' + str(file[0]))\n",
+      "    \n",
+      "    # create data source for file\n",
+      "    source = TxtSourceMpi(data=file[0], ts=file[1])\n",
+      "    # create data object\n",
+      "    data = TweezerData(source)\n",
+      "    data.compute_psd().fit_psd(maxF=3000)\n",
+      "    # write stuff back to data file\n",
+      "    source.write_data(data)\n",
+      "\n",
+      "print('Done')"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 9,
-       "text": [
-        "'/Users/christophehrlich/Documents/TranscriptionData/D3/refit/data/35_Date_2014_08_18_15_55_29.txt'"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "heading",
