--- a/notebooks/Thermal calibration.ipynb
+++ b/notebooks/Thermal calibration.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:43b555fc45f51194e028a7332d2ab2caf169a31ba2ba0984bd2ca9dbc69bad8b"
+  "signature": "sha256:acd7819c47678507438e75d5ac00a6d387c8292fa203f776cfa60f222a6ac9f2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,21 +19,13 @@
       "from tweezer.io import TxtSourceMpi\n",
       "from tweezer import TweezerData\n",
       "from tweezer.plot.psd import PsdFitPlot\n",
-      "import re"
+      "import re\n",
+      "from physics.viscosity import dynamic_viscosity_water_glycerol"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      }
-     ],
-     "prompt_number": 38
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -91,6 +83,10 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "water = 0.9\n",
+      "glycerol = 0.1\n",
+      "temp = 25\n",
+      "\n",
       "for file in matchedFiles:\n",
       "    print('Processing: ' + str(file[0]))\n",
       "    \n",
@@ -98,6 +94,7 @@
       "    source = TxtSourceMpi(data=file[0], ts=file[1])\n",
       "    # create data object\n",
       "    data = TweezerData(source)\n",
+      "    data.meta['viscosity'] = 1e-6 * dynamic_viscosity_water_glycerol(water, glycerol, temp)\n",
       "    data.compute_psd().fit_psd(maxF=3000)\n",
       "    # write stuff back to data file\n",
       "    source.write_data(data)\n",
