FIX: Spelling correction: tweezer -> tweezers :D

--- a/notebooks/Thermal calibration.ipynb
+++ b/notebooks/Thermal calibration.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2c9de30894adc566e335a996adc51a0278e3fb73eae712ee98be36cb31e79d84"
+  "signature": "sha256:a400147dfefcc26d1e7e3d6f80bc294deb3f21321bb765e3a1baede2194cf4a7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,25 +16,16 @@
       "%autoreload 2\n",
       "%matplotlib inline\n",
       "from ixo.file import get_files, get_similar_files\n",
-      "from tweezer.io import TxtSourceMpi\n",
-      "from tweezer import TweezerData\n",
-      "from tweezer.plot.psd import PsdFitPlot\n",
+      "from tweezers.io import TxtSourceMpi\n",
+      "from tweezers import TweezerData\n",
+      "from tweezers.plot.psd import PsdFitPlot\n",
       "import re\n",
       "from physics.viscosity import dynamic_viscosity_water_glycerol"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The autoreload extension is already loaded. To reload it, use:\n",
-        "  %reload_ext autoreload\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "heading",
@@ -87,7 +78,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 11
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -131,7 +122,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
