FIX: fix TxtMpiSource to user 'zeroOffset' instead of 'detectorOffset'

--- a/notebooks/Introduction.ipynb
+++ b/notebooks/Introduction.ipynb
@@ -123,11 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Reading metadata from data source.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -138,26 +145,26 @@
       "          ('psdNSamples', 524288),\n",
       "          ('psdDt', 1.2e-05),\n",
       "          ('aodY',\n",
-      "           MetaDict([('detectorOffset', -0.08664),\n",
+      "           MetaDict([('zeroOffset', -0.08664),\n",
       "                     ('cornerFrequency', 281.253681),\n",
       "                     ('stiffness', 0.040178),\n",
       "                     ('displacementSensitivity', 0.000498),\n",
       "                     ('beadRadius', 1.05)])),\n",
       "          ('aodX',\n",
-      "           MetaDict([('detectorOffset', -0.058736),\n",
+      "           MetaDict([('zeroOffset', -0.058736),\n",
       "                     ('cornerFrequency', 503.090072),\n",
       "                     ('stiffness', 0.071868),\n",
       "                     ('displacementSensitivity', 0.000616),\n",
       "                     ('beadDiameter', 2.1),\n",
       "                     ('beadRadius', 1.05)])),\n",
       "          ('pmY',\n",
-      "           MetaDict([('detectorOffset', -0.288765),\n",
+      "           MetaDict([('zeroOffset', -0.288765),\n",
       "                     ('cornerFrequency', 502.663972),\n",
       "                     ('stiffness', 0.071807),\n",
       "                     ('displacementSensitivity', 0.000573),\n",
       "                     ('beadRadius', 1.05)])),\n",
       "          ('pmX',\n",
-      "           MetaDict([('detectorOffset', -0.049036),\n",
+      "           MetaDict([('zeroOffset', -0.049036),\n",
       "                     ('cornerFrequency', 648.164174),\n",
       "                     ('stiffness', 0.092592),\n",
       "                     ('displacementSensitivity', 0.000737),\n",
