--- a/notebooks/Introduction.ipynb
+++ b/notebooks/Introduction.ipynb
@@ -113,6 +113,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pmXDiff</th>\n",
+       "      <th>pmYDiff</th>\n",
+       "      <th>pmXSum</th>\n",
+       "      <th>aodXDiff</th>\n",
+       "      <th>aodYDiff</th>\n",
+       "      <th>aodXSum</th>\n",
+       "      <th>fbXSum</th>\n",
+       "      <th>xDist</th>\n",
+       "      <th>yDist</th>\n",
+       "      <th>fbX</th>\n",
+       "      <th>fbY</th>\n",
+       "      <th>pmXSensor</th>\n",
+       "      <th>pmYSensor</th>\n",
+       "      <th>trackingReferenceTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.051054</td>\n",
+       "      <td>-0.293873</td>\n",
+       "      <td>2.599670</td>\n",
+       "      <td>-0.058238</td>\n",
+       "      <td>-0.085431</td>\n",
+       "      <td>3.135815</td>\n",
+       "      <td>0.721172</td>\n",
+       "      <td>-0.000171</td>\n",
+       "      <td>3000.000727</td>\n",
+       "      <td>-0.066968</td>\n",
+       "      <td>-0.160043</td>\n",
+       "      <td>4.764184</td>\n",
+       "      <td>5.934556</td>\n",
+       "      <td>251936295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.046354</td>\n",
+       "      <td>-0.290796</td>\n",
+       "      <td>2.598823</td>\n",
+       "      <td>-0.057791</td>\n",
+       "      <td>-0.087205</td>\n",
+       "      <td>3.133313</td>\n",
+       "      <td>0.722251</td>\n",
+       "      <td>-0.000171</td>\n",
+       "      <td>3000.000727</td>\n",
+       "      <td>-0.066320</td>\n",
+       "      <td>-0.160211</td>\n",
+       "      <td>4.764400</td>\n",
+       "      <td>5.934556</td>\n",
+       "      <td>251936295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.042462</td>\n",
+       "      <td>-0.286312</td>\n",
+       "      <td>2.597824</td>\n",
+       "      <td>-0.060053</td>\n",
+       "      <td>-0.087269</td>\n",
+       "      <td>3.132250</td>\n",
+       "      <td>0.722499</td>\n",
+       "      <td>-0.000171</td>\n",
+       "      <td>3000.000727</td>\n",
+       "      <td>-0.066680</td>\n",
+       "      <td>-0.160762</td>\n",
+       "      <td>4.764232</td>\n",
+       "      <td>5.934604</td>\n",
+       "      <td>251936295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.049967</td>\n",
+       "      <td>-0.286832</td>\n",
+       "      <td>2.597017</td>\n",
+       "      <td>-0.059278</td>\n",
+       "      <td>-0.096437</td>\n",
+       "      <td>3.135647</td>\n",
+       "      <td>0.722187</td>\n",
+       "      <td>-0.000171</td>\n",
+       "      <td>3000.000727</td>\n",
+       "      <td>-0.065865</td>\n",
+       "      <td>-0.160874</td>\n",
+       "      <td>4.764296</td>\n",
+       "      <td>5.934604</td>\n",
+       "      <td>251936295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.048225</td>\n",
+       "      <td>-0.289701</td>\n",
+       "      <td>2.596345</td>\n",
+       "      <td>-0.062155</td>\n",
+       "      <td>-0.090051</td>\n",
+       "      <td>3.140259</td>\n",
+       "      <td>0.721116</td>\n",
+       "      <td>-0.000171</td>\n",
+       "      <td>3000.000727</td>\n",
+       "      <td>-0.066840</td>\n",
+       "      <td>-0.159875</td>\n",
+       "      <td>4.764504</td>\n",
+       "      <td>5.934684</td>\n",
+       "      <td>251936295</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    pmXDiff   pmYDiff    pmXSum  aodXDiff  aodYDiff   aodXSum    fbXSum  \\\n",
+       "0 -0.051054 -0.293873  2.599670 -0.058238 -0.085431  3.135815  0.721172   \n",
+       "1 -0.046354 -0.290796  2.598823 -0.057791 -0.087205  3.133313  0.722251   \n",
+       "2 -0.042462 -0.286312  2.597824 -0.060053 -0.087269  3.132250  0.722499   \n",
+       "3 -0.049967 -0.286832  2.597017 -0.059278 -0.096437  3.135647  0.722187   \n",
+       "4 -0.048225 -0.289701  2.596345 -0.062155 -0.090051  3.140259  0.721116   \n",
+       "\n",
+       "      xDist        yDist       fbX       fbY  pmXSensor  pmYSensor  \\\n",
+       "0 -0.000171  3000.000727 -0.066968 -0.160043   4.764184   5.934556   \n",
+       "1 -0.000171  3000.000727 -0.066320 -0.160211   4.764400   5.934556   \n",
+       "2 -0.000171  3000.000727 -0.066680 -0.160762   4.764232   5.934604   \n",
+       "3 -0.000171  3000.000727 -0.065865 -0.160874   4.764296   5.934604   \n",
+       "4 -0.000171  3000.000727 -0.066840 -0.159875   4.764504   5.934684   \n",
+       "\n",
+       "   trackingReferenceTime  \n",
+       "0              251936295  \n",
+       "1              251936295  \n",
+       "2              251936295  \n",
+       "3              251936295  \n",
+       "4              251936295  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.data.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
