ENH: - varied loading data scheme, simpler now, TweezersDataCollection does all the findID stuff itself - new TweezersAnalysisCollection - much improved segment selection with Qt GUI

--- a/notebooks/Tweezers Template.ipynb
+++ b/notebooks/Tweezers Template.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -20,32 +18,33 @@
     "%matplotlib notebook\n",
     "\n",
     "import numpy as np\n",
-    "import scipy.constants as const\n",
+    "import scipy as sp\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import matplotlib as mpl\n",
     "\n",
-    "from tweezers import TweezersData\n",
-    "from tweezers.io import getAllIds, loadIds, loadSegments\n",
+    "from tweezers import TweezersData, TweezersDataCollection, TweezersAnalysis, TweezersAnalysisCollection\n",
     "from tweezers.plot.psd import PsdPlot, PsdFitPlot\n",
-    "from tweezers.collections import TweezersCollection\n",
     "from tweezers.ixo.fit import LeastSquaresFit\n",
-    "from tweezers.plot.interactive import SegmentSelector\n",
+    "from tweezers.plot.interactive import runSegmentSelector\n",
     "# from tweezers.ixo.utils import configLogger\n",
     "# configLogger(debug=True)\n",
     "\n",
     "# plotting options\n",
-    "sns.set_context('poster')\n",
-    "params = {'figure.figsize': (8.0, 5.0),\n",
+    "# plotting options\n",
+    "sns.set_context('talk')\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "params = {'lines.linewidth': 2,\n",
+    "          'figure.figsize': (6.0, 4.5),\n",
     "          'text.usetex': True,\n",
     "          'text.latex.preamble': [r'\\usepackage{siunitx}',\n",
     "                                  r'\\usepackage{lmodern}']}\n",
     "mpl.rcParams.update(params)\n",
     "\n",
     "path = '/Users/christophehrlich/Documents/Tweezers Data/'\n",
-    "ids = getAllIds(path)\n",
-    "tc = loadIds(ids)\n",
+    "tc = TweezersDataCollection.load(path)\n",
+    "# ac = TweezersAnalysisCollection.load(path)\n",
     "pathOut = '/Users/christophehrlich/Documents/Tweezers Biotec/'"
    ]
   },
@@ -60,12 +59,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "css = SegmentSelector(tc, 'pmYForce')"
+    "runSegmentSelector(tc)"
    ]
   },
   {
@@ -102,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   },
   "nav_menu": {},
   "toc": {
@@ -133,5 +131,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
