ENH: updatedf data analysis template Jupyter notebook

--- a/notebooks/Tweezers Template.ipynb
+++ b/notebooks/Tweezers Template.ipynb
@@ -4,73 +4,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import"
+    "# Import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib notebook\n",
+    "# %matplotlib inline\n",
     "\n",
     "import numpy as np\n",
     "import scipy as sp\n",
     "import pandas as pd\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import matplotlib as mpl\n",
     "\n",
     "from tweezers import TweezersData, TweezersDataCollection, TweezersAnalysis, TweezersAnalysisCollection\n",
     "from tweezers.plot.psd import PsdPlot, PsdFitPlot\n",
     "from tweezers.ixo.fit import LeastSquaresFit\n",
-    "from tweezers.plot.interactive import runSegmentSelector\n",
+    "import tweezers.analysis.tools as at\n",
+    "import tweezers.ixo.statistics as stat\n",
+    "import tweezers.physics.polymers as pol\n",
     "# from tweezers.ixo.utils import configLogger\n",
     "# configLogger(debug=True)\n",
     "\n",
     "# plotting options\n",
-    "# plotting options\n",
     "sns.set_context('talk')\n",
     "plt.style.use('fivethirtyeight')\n",
-    "params = {'lines.linewidth': 2,\n",
+    "params = {'figure.facecolor': 'ffffff',\n",
+    "          'patch.force_edgecolor': True,\n",
+    "          'lines.linewidth': 2,\n",
     "          'figure.figsize': (6.0, 4.5),\n",
+    "#           'figure.dpi': 150,\n",
     "          'text.usetex': True,\n",
     "          'text.latex.preamble': [r'\\usepackage{siunitx}',\n",
-    "                                  r'\\usepackage{lmodern}']}\n",
-    "mpl.rcParams.update(params)\n",
-    "\n",
-    "path = '/Users/christophehrlich/Documents/Tweezers Data/'\n",
-    "tc = TweezersDataCollection.load(path)\n",
-    "# ac = TweezersAnalysisCollection.load(path)\n",
-    "pathOut = '/Users/christophehrlich/Documents/Tweezers Biotec/'"
+    "                                  r'\\usepackage{lmodern}',\n",
+    "                                  r'\\setlength{\\parindent}{0cm}']}\n",
+    "mpl.rcParams.update(params)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Segment Selection"
+    "# Load Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "runSegmentSelector(tc)"
+    "path = '/Users/christophehrlich/Documents/Tweezers Data/'\n",
+    "ac = TweezersAnalysisCollection.load(path)\n",
+    "\n",
+    "for a in ac.values():\n",
+    "    print(a.name)\n",
+    "    # hydrodynamic corrections\n",
+    "    at.osciHydrodynamicCorr(a)\n",
+    "    # baseline and video corrections\n",
+    "    at.baselineSubtraction(a, averageBsl=100)\n",
+    "    at.zeroDistance(a)\n",
+    "    at.displacementCorrection(a, lowForceLimit=5)\n",
+    "    at.detectRip(a)\n",
+    "# at.analysisSummaryFig(ac, path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis"
+    "# Analysis"
    ]
   },
   {
@@ -86,9 +99,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:tweezers]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-tweezers-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -100,25 +113,27 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   },
   "nav_menu": {},
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
+   "base_numbering": 1,
    "nav_menu": {
     "height": "66px",
     "width": "252px"
    },
-   "navigate_menu": true,
-   "number_sections": false,
+   "number_sections": true,
    "sideBar": true,
-   "threshold": 6,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "279.1875px"
+   },
    "toc_section_display": "block",
    "toc_window_display": true
   },
