UPD: updated tweezers template notebook

--- a/notebooks/Tweezers Template.ipynb
+++ b/notebooks/Tweezers Template.ipynb
@@ -26,13 +26,15 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from pathlib import Path\n",
     "\n",
     "from tweezers import TweezersData, TweezersDataCollection, TweezersAnalysis, TweezersAnalysisCollection\n",
-    "from tweezers.plot.psd import PsdPlot, PsdFitPlot\n",
+    "from tweezers.io import Hdf5BiotecSource\n",
     "from tweezers.ixo.fit import LeastSquaresFit\n",
     "import tweezers.analysis.tools as at\n",
     "import tweezers.ixo.statistics as stat\n",
     "import tweezers.physics.polymers as pol\n",
+    "from tweezers.ixo import io\n",
     "# from tweezers.ixo.utils import configLogger\n",
     "# configLogger(debug=True)\n",
     "\n",
@@ -43,12 +45,16 @@
     "          'patch.force_edgecolor': True,\n",
     "          'lines.linewidth': 2,\n",
     "          'figure.figsize': (6.0, 4.5),\n",
+    "          'figure.constrained_layout.use': True,\n",
     "#           'figure.dpi': 150,\n",
-    "          'text.usetex': True,\n",
-    "          'text.latex.preamble': [r'\\usepackage{siunitx}',\n",
-    "                                  r'\\usepackage{lmodern}',\n",
-    "                                  r'\\setlength{\\parindent}{0cm}']}\n",
-    "mpl.rcParams.update(params)"
+    "#           'text.usetex': True,\n",
+    "#           'text.latex.preamble': [r'\\usepackage{siunitx}',\n",
+    "#                                   r'\\usepackage{lmodern}',\n",
+    "#                                   r'\\setlength{\\parindent}{0cm}']\n",
+    "         }\n",
+    "mpl.rcParams.update(params)\n",
+    "\n",
+    "dataPath = Path('/Users/cehrlich/Documents/Tweezers Data/2020-07 MCB EEA1')"
    ]
   },
   {
@@ -64,19 +70,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/christophehrlich/Documents/Tweezers Data/'\n",
+    "path = dataPath / '8kb handles'\n",
     "ac = TweezersAnalysisCollection.load(path)\n",
     "\n",
     "for a in ac.values():\n",
-    "    print(a.name)\n",
     "    # hydrodynamic corrections\n",
     "    at.osciHydrodynamicCorr(a)\n",
     "    # baseline and video corrections\n",
-    "    at.baselineSubtraction(a, averageBsl=100)\n",
+    "    at.baselineSubtraction(a, binBsl=50)\n",
     "    at.zeroDistance(a)\n",
     "    at.displacementCorrection(a, lowForceLimit=5)\n",
     "    at.detectRip(a)\n",
-    "# at.analysisSummaryFig(ac, path)"
+    "# at.analysisSummaryFig(ac, path)\n",
+    "acl = ac"
    ]
   },
   {
@@ -113,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   },
   "nav_menu": {},
   "toc": {
